--- a/src/packages/excalidraw/package.json
+++ b/src/packages/excalidraw/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@excalidraw/excalidraw",
-  "version": "0.12.0",
+  "version": "0.0.1",
   "main": "main.js",
   "types": "types/packages/excalidraw/index.d.ts",
   "files": [
@@ -55,7 +55,7 @@
     "autoprefixer": "10.4.7",
     "babel-loader": "8.2.5",
     "babel-plugin-transform-class-properties": "6.24.1",
-    "cross-env": "7.0.3",
+    "cross-env": "^7.0.3",
     "css-loader": "6.7.1",
     "dotenv": "16.0.1",
     "mini-css-extract-plugin": "2.6.1",
